# learning-opencv

./: .gitignore  README.md
week1/: CMakeLists.txt  Matrix Operations  main.cpp
week2/: CMakeLists.txt  inverse.cpp  invert.cpp  main.cpp  rotate.cpp  text_overlay.cpp  threshold.cpp  threshold_sample.cpp
week3/: CMakeLists.txt  ffourier.cpp  filterfourier.cpp  fourier.cpp
week4/: build.gradle  settings.gradle
week4/src/main/java/: module-info.java
week4/src/main/java/in/alqaholic/OpenCVJava/: GUI.java  Utils.java
week4/src/main/java/in/alqaholic/OpenCVJava/controllers/: MainController.java
week4/src/main/resources/css/: main.css
week4/src/main/resources/fxml/: main.fxml
week5/: build.gradle  settings.gradle
week5/src/main/java/in/alqaholic/OpenCVJava/: GUI.java  Utils.java
week5/src/main/java/in/alqaholic/OpenCVJava/controllers/: MainController.java
week5/src/main/resources/fxml/: main.fxml
week6/: build.gradle  settings.gradle
week6/src/main/java/: module-info.java
week6/src/main/java/in/alqaholic/AStarPathFinding/: GUI.java  Utils.java
week6/src/main/java/in/alqaholic/AStarPathFinding/astar/: Cell.java  Grid.java
week6/src/main/java/in/alqaholic/AStarPathFinding/controllers/: AStar.java  MainController.java
week6/src/main/resources/fxml/: main.fxml
